syntax = "proto3";

import "google/protobuf/timestamp.proto";

package user;
option go_package = "github.com/smartmemos/memos/internal/proto/model/user";

message AccessToken {
  string access_token = 1;
  string description = 2;
  google.protobuf.Timestamp issued_at = 3;
  google.protobuf.Timestamp expires_at = 4;
}